hphp/test/zend/good/ext/gd/tests/imagecreatetruecolor_basic.php.skipif
<?php 
	if (!extension_loaded("gd")) die("skip GD not present");
	if (!function_exists("imagecreatetruecolor")) die("skip GD Version not compatible");
?>