hphp/test/zend/bad/ext/gd/tests/imageellipse_error7.php.skipif
<?php  
if (!extension_loaded("gd")) die("skip GD not present"); 
?> 